2010-05-14  Jakub Jelinek  <jakub@redhat.com>

	PR debug/44136
	* cfgexpand.c (expand_debug_expr): If non-memory op0
	has BLKmode, return NULL.

2010-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-05-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/44088
	* config/i386/sse.md (*avx_vmmaskcmp<mode>3): New.

2010-05-14  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44124
	* tree-ssa-sccvn.c (vn_nary_may_trap): Fix invalid memory access.

2010-05-13  Jason Merrill  <jason@redhat.com>

	* gimplify.c (gimplify_expr) [MODIFY_EXPR]: Trust GS_OK even if the
	rhs didn't change.

	PR c++/43787
	* gimplify.c (gimplify_expr): Keep working if gimplify_modify_expr
	returns GS_OK.
	(gimplify_modify_expr_rhs): Return GS_OK if anything changed.

2010-05-12  Wolfgang Gellerich  <gellerich@de.ibm.com>

	* config/s390/s390.c (override_options): Adjust the z10 defaults
	for max-unroll-times, max-completely-peeled-insns
	and max-completely-peel-times.

2010-05-12  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/44085
	* gimplify.c (enum omp_region_type): Add ORT_UNTIED_TASK,
	change value of ORT_TASK.
	(new_omp_context): Handle ORT_UNTIED_TASK like ORT_TASK.
	(omp_notice_threadprivate_variable): New function.
	(omp_notice_variable): Call it for threadprivate variables.
	If enclosing ctx is a task, print enclosing task rather than
	enclosing parallel.  Handle ORT_UNTIED_TASK like ORT_TASK.
	(gimplify_omp_task): Pass ORT_UNTIED_TASK instead of ORT_TASK
	if task has untied clause.

2010-05-11  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/44071
	* cfglayout.c (fixup_reorder_chain): Allow asm goto to have
	no fallthru edge.
	* cfgcleanup.c (try_optimize_cfg): When in cfglayout mode
	optimizing away empty bb with no successors, move over its
	footer chain to fallthru predecessor.
	* cfgrtl.c (patch_jump_insn): Update also REG_LABEL_OPERAND.
	(rtl_split_edge): For asm goto call patch_jump_insn even if
	splitting fallthru edge.
