@@ -1,3 +1,9 @@
+2010-05-14  Jason Merrill  <jason@redhat.com>
+
+	PR c++/44127
+	* cp-gimplify.c (gimplify_must_not_throw_expr): Use
+	gimple_build_eh_must_not_throw.
+
 2010-05-13  Jason Merrill  <jason@redhat.com>
 
 	PR c++/43787
