@@ -1,3 +1,8 @@
+2010-05-14  Jason Merrill  <jason@redhat.com>
+
+	PR c++/44127
+	* g++.dg/eh/terminate1.C: New.
+
 2010-05-14  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/44136
